CSS fix to allow background on the bottom - after the whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ h1 {
 #main {
     background-image: url(../images/concrete-texture.png);
     background-color: #ccc;
-    padding: 35px;
+    padding: 35px 35px 70px 35px;
     border-top: 2px solid #c0bdbd;
     overflow: auto;
     clear: both;
